--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
+    "@ant-design/pro-components": "^2.4.4",
+    "antd": "^5.4.0",
+    "less": "^4.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
