--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "@ant-design/pro-components": "^2.4.4",
+    "@apollo/client": "^3.7.11",
     "antd": "^5.4.0",
     "less": "^4.1.3",
     "react": "^18.2.0",
