--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "antd": "^5.4.0",
     "less": "^4.1.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
