--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/pro-components": "^2.4.4",
     "@apollo/client": "^3.7.11",
     "antd": "^5.4.0",
+    "antd-img-crop": "^4.12.2",
     "less": "^4.1.3",
     "path": "^0.12.7",
     "react": "^18.2.0",
