--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "antd": "^5.4.0",
     "antd-img-crop": "^4.12.2",
     "less": "^4.1.3",
+    "lodash": "^4.17.21",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.194",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
